--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-.venv
-.trash
-
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -175,3 +172,7 @@ cython_debug/
 
 # PyPI configuration file
 .pypirc
+
+# stuff
+.venv
+.trash
